# sic

./: .gitignore  DOCUMENTACAO.md  EVOLUCAO.md  FLUXO_TRABALHO.md  JORNADA.md  MANUAL.md  PROJETO.md  README.md  index.html  main.py  make_tests.py  pyproject.toml  pyrightconfig.json  requirements.txt  run 2.sh  run.sh  scratch_price.py  sic.iss  sic.spec  ui_main.py
.github/workflows/: package.yml
Updates/Documentation/: REGRAS_DE_NEGOCIO.md
Updates/Evolution/: Auditor_Expansion_Progressive_Categories 3.md  Auditor_Improvement_Price_Clarity.md  Auditor_new_validation_CMV_x_Grade  Sync Merchandisin_Melhoria
assets/icons/: app.icns
js/: auditor.js  gerador.js  sync.js  utils.js
mockups/: 01_home_redesign.html  02_process_page.html  03_results_table.html  04_command_palette.html  _shared.css  index.html
modules/: ai_agent.py  auditor_engine.py  history_engine.py
scripts/: obfuscate_key.py
src/: main_app.py
src/core/: _secret.py  ai_agent.py  auditor_engine.py  brand_detector.py  cadastro_engine.py  changelog_data.py  utils.py  (+8 more)
test_audit/: cat_ml_margin_conflict 2.xml  cat_natura_margin_conflict 3.xml  catalog_avon.xml  catalog_ml.xml  catalog_natura.xml  excel_margin_conflict 2.xlsx  grade_avon.xlsx  grade_natura.xlsx  pb_margin_conflict 3.xml  pricebook.xml
test_files/: base.xlsx  test_catalog_ml 2.xml  test_catalog_natura 3.xml  test_pricebook 2.xml
views/: view_auditor.py  view_gerador.py  view_history.py  view_home.py  view_settings.py  view_sync.py  view_volumetria.py  widgets.py
workers/: worker_auditor.py  worker_gerador.py  worker_sync.py
(+41 files in other folders)
